--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js --ext js,njk,html ",
+    "schema:sync": "node src/cli/init.db.js",
+    "dev": "npm run schema:sync && nodemon src/app.js --ext js,njk,html ",
     "test": "jest --coverage",
     "test:watch": "jest --watch"
   },
@@ -32,12 +33,13 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "better-sqlite3": "^7.1.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "nunjucks": "^3.2.2",
-    "rsdi": "^1.0.5"
+    "rsdi": "^1.0.5",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0"
   }
 }
